--- a/index.html
+++ b/index.html
@@ -6,24 +6,76 @@
   <title>Aditya</title>
   <link rel="stylesheet" href="CSS/styles.css">
   <link rel="icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Bangers|Great+Vibes|Permanent+Marker|Satisfy&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Acme|Bangers|Great+Vibes|Permanent+Marker|Satisfy&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
   <header>
+    <nav>
 
+    </nav>
   </header>
 
   <div class="top_container" id="div1">
-    <img class="c1" src="images/cloudd.png" alt="">
+    <!-- <img class="c1" src="images/cloudd.png" alt=""> -->
+    <img class="c1" src="images/icons8-code-96.png" alt="">
     <h1>I'm Aditya.</h1>
-    <p>A Web Developer.</p>
-    <img class="c2" src="images/cloudd.png" alt="">
-    <img class="pro" src="images/mountain.png" alt="">
+    <p class="ti">A Web Developer.</p>
+    <!-- <img class="c2" src="images/cloudd.png" alt=""> -->
+    <img class="c2" src="images/icons8-code-96.png" alt="">
+    <!-- <img class="pro" src="images/mountain.png" alt=""> -->
+    <img class="pro" src="images/title.8903493415242316020499.png" alt="">
   </div>
 
+  <div class="middle_container">
+    <div class="profile">
+      <img id=Adi src="https://scontent-sin6-2.cdninstagram.com/vp/32d4f400f6bbe0c1f42c6d5087ea5d79/5DD14856/t51.2885-15/e35/56180277_295552328010444_5947217355881778378_n.jpg?_nc_ht=scontent-sin6-2.cdninstagram.com" alt="Aditya">
+      <h2>Hello.</h2>
+      <p>Experienced Member with a demonstrated history of working in the computer hardware industry.<br>
+           Skilled in Python (Programming Language), Communication, JavaScript, Arduino, and JSON.<br>
+            Strong operations professional with a Bachelor of Engineering - BE focused in Information science from Siddaganga Institute of Technology, TUMKUR. <br>
+             Interested in the
+          field of <strong>Machine Learning</strong> and <strong>Artificial Intelligence</strong>
+          . Have strong command in <strong><em>C , Python </em></strong>and <strong><em>Javascript</em></strong></p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <!-- <img class="" src="icons8-javascript-96.png" alt="skills">
+      <img class="" src="icons8-python-96.png" alt="skills">
+      <img class="" src="icons8-html-5-96.png" alt="skills">
+      <img class="" src="icons8-npm-96.png" alt="skills">
+      <img class="" src="icons8-c-programming-96.png" alt="skills">
+      <img class="" src="nodejs.png" alt=""> -->
+      <div class="skill-row">
+        <img src="a2.png" alt="skills">
+        <h3></h3>
+        <p></p>
+      </div>
+      <div class="skill-row">
+        <img src="icons8-python-96.png" alt="skill">
+        <h3></h3>
+        <p></p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>If you want to learn programming.</h3>
+      <p></p>
+      <a class="btn" href="mailto:adityapathak1189@gmail.com">CONTACT ME</a>
+    </div>
+  </div>
 
+  <div class="bottom-container">
+    <a href="#">LinkedIn</a>
+    <a href="#">Github</a>
+    <a href="#">Instagram</a>
+    <a href="#">Facebook</a>
+    <a href="#">Twitter</a>
+    <p>&copy 2019 Aditya Pathak.</p>
+  </div>
 
 </body>
 
