--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="profile">
       <img id=Adi src="https://scontent-sin6-2.cdninstagram.com/vp/32d4f400f6bbe0c1f42c6d5087ea5d79/5DD14856/t51.2885-15/e35/56180277_295552328010444_5947217355881778378_n.jpg?_nc_ht=scontent-sin6-2.cdninstagram.com" alt="Aditya">
       <h2>Hello.</h2>
-      <p>Experienced Member with a demonstrated history of working in the computer hardware industry.<br>
+      <p>I am Aditya a 2nd year Information Science student at Siddaganga Institute of Technology Experienced Member with a demonstrated history of working in the computer hardware industry.<br>
            Skilled in Python (Programming Language), Communication, JavaScript, Arduino, and JSON.<br>
             Strong operations professional with a Bachelor of Engineering - BE focused in Information science from Siddaganga Institute of Technology, TUMKUR. <br>
              Interested in the
@@ -69,11 +69,11 @@
   </div>
 
   <div class="bottom-container">
-    <a href="#">LinkedIn</a>
-    <a href="#">Github</a>
-    <a href="#">Instagram</a>
-    <a href="#">Facebook</a>
-    <a href="#">Twitter</a>
+    <a href="https://www.linkedin.com/in/aditya-pathak-a26aa1173/">LinkedIn</a>
+    <a href="https://github.com/adityasunny1189">Github</a>
+    <a href="https://www.instagram.com/_aditya_pathak___/">Instagram</a>
+    <a href="https://www.facebook.com/">Facebook</a>
+    <a href="https://twitter.com/login">Twitter</a>
     <p>&copy 2019 Aditya Pathak.</p>
   </div>
 
