--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="profile">
       <img id=Adi src="https://scontent-sin6-2.cdninstagram.com/vp/32d4f400f6bbe0c1f42c6d5087ea5d79/5DD14856/t51.2885-15/e35/56180277_295552328010444_5947217355881778378_n.jpg?_nc_ht=scontent-sin6-2.cdninstagram.com" alt="Aditya">
       <h2>Hello.</h2>
-      <p>I am Aditya a 2nd year Information Science student at Siddaganga Institute of Technology Experienced Member with a demonstrated history of working in the computer hardware industry.<br>
+      <p>I am Aditya a 2nd year Information Science student at Siddaganga Institute of Technology <br>Experienced Member with a demonstrated history of working in the computer hardware industry.<br>
            Skilled in Python (Programming Language), Communication, JavaScript, Arduino, and JSON.<br>
             Strong operations professional with a Bachelor of Engineering - BE focused in Information science from Siddaganga Institute of Technology, TUMKUR. <br>
              Interested in the
@@ -42,19 +42,20 @@
     <hr>
     <div class="skills">
       <h2>My Skills.</h2>
-      <!-- <img class="" src="icons8-javascript-96.png" alt="skills">
-      <img class="" src="icons8-python-96.png" alt="skills">
-      <img class="" src="icons8-html-5-96.png" alt="skills">
-      <img class="" src="icons8-npm-96.png" alt="skills">
-      <img class="" src="icons8-c-programming-96.png" alt="skills">
-      <img class="" src="nodejs.png" alt=""> -->
+      <img class="" src="images/icons8-c-programming-96.png" alt="skills">
+      <img class="" src="images/icons8-python-96.png" alt="skills">
+      <img class="" src="images/icons8-javascript-96.png" alt="skills">
+      <img class="" src="images/icons8-html-5-96.png" alt="skills">
+      <img class="pro-big" src="images/css-3.png" alt="">
+      <img class="" src="images/icons8-npm-96.png" alt="skills">
+      <img class="pro-big" src="images/nodejs.png" alt="">
       <div class="skill-row">
-        <img src="a2.png" alt="skills">
-        <h3></h3>
-        <p></p>
+        <img class="skl-big" src="images/s2.png" alt="skills">
+        <h3>Programming</h3>
+        <p>I am a silled programmer and a web developer</p>
       </div>
       <div class="skill-row">
-        <img src="icons8-python-96.png" alt="skill">
+        <img class="skl-big" src="images/s3.jpg" alt="skill">
         <h3></h3>
         <p></p>
       </div>
