--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
       <img id=Adi src="https://scontent-sin6-2.cdninstagram.com/vp/32d4f400f6bbe0c1f42c6d5087ea5d79/5DD14856/t51.2885-15/e35/56180277_295552328010444_5947217355881778378_n.jpg?_nc_ht=scontent-sin6-2.cdninstagram.com" alt="Aditya">
       <h2>Hello.</h2>
       <p>I am Aditya a 2nd year Information Science student at Siddaganga Institute of Technology <br>Experienced Member with a demonstrated history of working in the computer hardware industry.<br>
-           Skilled in Python (Programming Language), Communication, JavaScript, Arduino, and JSON.<br>
-            Strong operations professional with a Bachelor of Engineering - BE focused in Information science from Siddaganga Institute of Technology, TUMKUR. <br>
-             Interested in the
-          field of <strong>Machine Learning</strong> and <strong>Artificial Intelligence</strong>
-          . Have strong command in <strong><em>C , Python </em></strong>and <strong><em>Javascript</em></strong></p>
+        Skilled in Python (Programming Language), Communication, JavaScript, Arduino, and JSON.<br>
+        Strong operations professional with a Bachelor of Engineering - BE focused in Information science from Siddaganga Institute of Technology, TUMKUR. <br>
+        Interested in the
+        field of <strong>Machine Learning</strong> and <strong>Artificial Intelligence</strong>
+        . Have strong command in <strong><em>C , Python </em></strong>and <strong><em>Javascript</em></strong></p>
     </div>
     <hr>
     <div class="skills">
@@ -52,7 +52,13 @@
       <div class="skill-row">
         <img class="skl-big" src="images/s2.png" alt="skills">
         <h3>Programming</h3>
-        <p>I am a silled programmer and a web developer</p>
+        <p>I am a skilled programmer and a web developer. I started programming when i just entered college. <br>
+          In my 1st sem i learnt python basics along with arduino .<br> I made many hobby projects on arduino uno like "Line follower bot"<br>
+          "Obstacle avoidance bot" and i automated the fans and lights of my hostel room.<br>
+          In my 2nd sem i was having C programming in my syllabus and then i learnt about C.<br>
+          According to me C is one of the most interesting programming language.<br>
+          In my 2nd sem i joined "Club Of Robotics (CORSIT)" and then started my robotic journey.<br>
+          In my summer break i learnt web development and complete Javascript.</p>
       </div>
       <div class="skill-row">
         <img class="skl-big" src="images/s3.jpg" alt="skill">
