--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
       </div>
       <div class="skill-row">
         <img class="skl-big" src="images/s3.jpg" alt="skill">
-        <h3></h3>
-        <p></p>
+        <h3>Web Development</h3>
+        <p>As you can see this website this is build by me.<br>
+          I have built this website over a time period of 5 days just by doing night coding of 2 hr.</p>
       </div>
     </div>
     <hr>
