--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="profile">
       <img id=Adi src="https://scontent-sin6-2.cdninstagram.com/vp/32d4f400f6bbe0c1f42c6d5087ea5d79/5DD14856/t51.2885-15/e35/56180277_295552328010444_5947217355881778378_n.jpg?_nc_ht=scontent-sin6-2.cdninstagram.com" alt="Aditya">
       <h2>Hello.</h2>
-      <p>I am Aditya a 2nd year Information Science student at Siddaganga Institute of Technology <br>Experienced Member with a demonstrated history of working in the computer hardware industry.<br>
+      <p id="bio">I am Aditya a 2nd year Information Science student at Siddaganga Institute of Technology <br>Experienced Member with a demonstrated history of working in the computer hardware industry.<br>
         Skilled in Python (Programming Language), Communication, JavaScript, Arduino, and JSON.<br>
         Strong operations professional with a Bachelor of Engineering - BE focused in Information science from Siddaganga Institute of Technology, TUMKUR. <br>
         Interested in the
@@ -41,7 +41,7 @@
     </div>
     <hr>
     <div class="skills">
-      <h2>My Skills.</h2>
+      <h2 class="My-skills">My Skills.</h2>
       <img class="" src="images/icons8-c-programming-96.png" alt="skills">
       <img class="" src="images/icons8-python-96.png" alt="skills">
       <img class="" src="images/icons8-javascript-96.png" alt="skills">
@@ -50,28 +50,26 @@
       <img class="" src="images/icons8-npm-96.png" alt="skills">
       <img class="pro-big" src="images/nodejs.png" alt="">
       <div class="skill-row">
-        <img class="skl-big" src="images/s2.png" alt="skills">
+        <img class="skl-big" id="p1" src="images/s2.png" alt="skills">
         <h3>Programming</h3>
         <p>I am a skilled programmer and a web developer. I started programming when i just entered college. <br>
           In my 1st sem i learnt python basics along with arduino .<br> I made many hobby projects on arduino uno like "Line follower bot"<br>
           "Obstacle avoidance bot" and i automated the fans and lights of my hostel room.<br>
           In my 2nd sem i was having C programming in my syllabus and then i learnt about C.<br>
-          According to me C is one of the most interesting programming language.<br>
-          In my 2nd sem i joined "Club Of Robotics (CORSIT)" and then started my robotic journey.<br>
-          In my summer break i learnt web development and complete Javascript.</p>
+          According to me C is one of the most interesting programming language.</p>
       </div>
       <div class="skill-row">
-        <img class="skl-big" src="images/s3.jpg" alt="skill">
+        <img class="skl-big" id="p2" src="images/s3.jpg" alt="skill">
         <h3>Web Development</h3>
-        <p>As you can see this website this is build by me.<br>
+        <p class="down_para">In my summer break i learnt web development and complete Javascript.<br>As you can see this website this is build by me.<br>
           I have built this website over a time period of 5 days just by doing night coding of 2 hr.</p>
       </div>
     </div>
     <hr>
     <div class="contact-me">
-      <h2>Get In Touch</h2>
-      <h3>If you want to learn programming.</h3>
-      <p></p>
+      <h2 class="get-in-touch">Get In Touch</h2>
+      <h3>I’m currently available for freelance work.</h3>
+      <p>If you have a project that you want to get started,<br> think you need my help with something or just fancy saying hey, then get in touch.</p>
       <a class="btn" href="mailto:adityapathak1189@gmail.com">CONTACT ME</a>
     </div>
   </div>
@@ -82,7 +80,7 @@
     <a href="https://www.instagram.com/_aditya_pathak___/">Instagram</a>
     <a href="https://www.facebook.com/">Facebook</a>
     <a href="https://twitter.com/login">Twitter</a>
-    <p>&copy 2019 Aditya Pathak.</p>
+    <p class="copywright">&copy 2019 Aditya Pathak.</p>
   </div>
 
 </body>
