--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <div class="profile">
       <img id=Adi src="https://scontent-sin6-2.cdninstagram.com/vp/32d4f400f6bbe0c1f42c6d5087ea5d79/5DD14856/t51.2885-15/e35/56180277_295552328010444_5947217355881778378_n.jpg?_nc_ht=scontent-sin6-2.cdninstagram.com" alt="Aditya">
       <h2>Hello.</h2>
-      <p id="bio">I am Aditya a 2nd year Information Science student at Siddaganga Institute of Technology <br>Experienced Member with a demonstrated history of working in the computer hardware industry.<br>
-        Skilled in Python (Programming Language), Communication, JavaScript, Arduino, and JSON.<br>
+      <p id="bio">I am Aditya a 2nd year Information Science student at Siddaganga Institute of Technology <br>Experienced Member with a demonstrated history of working in the computer hardware.<br>
+        Skilled in Python (Programming Language), Communication, JavaScript, Arduino.<br>
         Strong operations professional with a Bachelor of Engineering - BE focused in Information science from Siddaganga Institute of Technology, TUMKUR. <br>
         Interested in the
         field of <strong>Machine Learning</strong> and <strong>Artificial Intelligence</strong>
@@ -55,8 +55,7 @@
         <p>I am a skilled programmer and a web developer. I started programming when i just entered college. <br>
           In my 1st sem i learnt python basics along with arduino .<br> I made many hobby projects on arduino uno like "Line follower bot"<br>
           "Obstacle avoidance bot" and i automated the fans and lights of my hostel room.<br>
-          In my 2nd sem i was having C programming in my syllabus and then i learnt about C.<br>
-          According to me C is one of the most interesting programming language.</p>
+          In my 2nd sem i was having C programming in my syllabus and then i learnt about C.</p>
       </div>
       <div class="skill-row">
         <img class="skl-big" id="p2" src="images/s3.jpg" alt="skill">
@@ -69,17 +68,17 @@
     <div class="contact-me">
       <h2 class="get-in-touch">Get In Touch</h2>
       <h3>I’m currently available for freelance work.</h3>
-      <p>If you have a project that you want to get started,<br> think you need my help with something or just fancy saying hey, then get in touch.</p>
-      <a class="btn" href="mailto:adityapathak1189@gmail.com">CONTACT ME</a>
+      <p class="end">If you have a project that you want to get started,<br> think you need my help with something or just fancy saying hey, then get in touch.</p>
+      <a class="butn" href="mailto:adityapathak1189@gmail.com">CONTACT ME</a>
     </div>
   </div>
 
   <div class="bottom-container">
-    <a href="https://www.linkedin.com/in/aditya-pathak-a26aa1173/">LinkedIn</a>
-    <a href="https://github.com/adityasunny1189">Github</a>
-    <a href="https://www.instagram.com/_aditya_pathak___/">Instagram</a>
-    <a href="https://www.facebook.com/">Facebook</a>
-    <a href="https://twitter.com/login">Twitter</a>
+    <a href="https://www.linkedin.com/in/aditya-pathak-a26aa1173/"><img class="social" src="images/linkedin.png" alt=""></a>
+    <a href="https://github.com/adityasunny1189"><img class="social" src="images/github1.png" alt=""></a>
+    <a href="https://www.instagram.com/_aditya_pathak___/"><img class="social" src="images/instagram.png" alt=""></a>
+    <a href="https://www.facebook.com/"><img class="social" src="images/facebook.png" alt=""></a>
+    <a href="https://twitter.com/login"><img class="social" src="images/twitter.png" alt=""></a>
     <p class="copywright">&copy 2019 Aditya Pathak.</p>
   </div>
 
