--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" id="rightid" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="rightid" href="#">About <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html#Adi">About <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="rightid" href="#">Contact <span class="sr-only">current)</span></a>
+              <a class="nav-link" href="index.html#contact-adi">Contact <span class="sr-only">current)</span></a>
             </li>
           </ul>
         </div>
@@ -89,7 +89,7 @@
       <h2 class="get-in-touch">Get In Touch</h2>
       <h3>I’m currently available for freelance work.</h3>
       <p class="end">If you have a project that you want to get started,<br> think you need my help with something or just fancy saying hey, then get in touch.</p>
-      <a class="butn" href="mailto:adityapathak1189@gmail.com">CONTACT ME</a>
+      <a class="butn" id="contact-adi" href="mailto:adityapathak1189@gmail.com">CONTACT ME</a>
     </div>
   </div>
 
